--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     {
       "name": "Ramanan Sivaranjan",
       "email": "ramanan@sdelements.com"
+    },
+    {
+      "name": "Michael Bennett",
+      "email": "michael@securitycompass.com"
     }
   ],
   "keywords": [
@@ -33,7 +37,9 @@
     "passport-local": "0.1.6",
     "passport.socketio": "1.0.1",
     "knox": "~0.8.9",
-    "mongoose-unique-validator": "~0.3.0"
+    "mongoose-unique-validator": "~0.3.0",
+    "passport-kerberos": "0.0.1",
+    "LDAP": "1.1.6"
   },
   "engine": {
     "node": ">=0.7"
