Changed the realm in the example settings.. also fixed some of the ldap ones

--- a/settings.js.sample
+++ b/settings.js.sample
@@ -36,9 +36,9 @@ var config = {
 
     //LDAP
     ldap_connect_settings: {
-        uri: 'ldap://your.ldap.server',
+        uri: 'ldaps://your.ldap.server',
         // Replace with your appropriate LDAP version
-        version: 4,
+        version: 3,
         connecttimeout: 1
     },
 
