--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "knox": "~0.8.9",
     "mongoose-unique-validator": "~0.3.0",
     "passport-kerberos": "0.0.1",
-    "LDAP": "1.1.6"
+    "ldapjs": "^0.7.1",
+    "passport-ldapauth": "^0.2.0"
   },
   "engine": {
     "node": ">=0.7"
