Disabled authentication methods if they're not activated in settings. Cleaned up some LDAP stuff. Still need to full test

--- a/settings.js.sample
+++ b/settings.js.sample
@@ -71,6 +71,10 @@ var config = {
         }
     },
 
+    local: {
+        enabled: true
+    },
+
     // Misc
     debug: false,
     media_url: '/media',
